--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,41 +2,397 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
+    "import zipfile\n",
+    "import io\n",
+    "import sqlite3\n",
     "\n",
-    "def process_inventory_data(inventory_df, days=7):\n",
+    "\n",
+    "config = {\n",
+    "    \"APE\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 0 if x == \"No\" else (10 if x == \"YES\" else 0),\n",
+    "    },\n",
+    "    \"BET\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"BGA\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"COM\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 3,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"FAI\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"FEB\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 3,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"FIR\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 10 if x == \"Y\" else 0,\n",
+    "    },\n",
+    "    \"FPS\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 4,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"JUR\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"KLA\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: x,\n",
+    "    },\n",
+    "    \"KYB\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 0 if x == \"N\" else (10 if x == \"Y\" else 0),\n",
+    "    },\n",
+    "    \"MOT\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 3,\n",
+    "        \"process_func\": lambda x: 10 if x > 10 else x,\n",
+    "    },\n",
+    "    \"ROL\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 3,\n",
+    "        \"process_func\": lambda x: 10 if x == \"In Stock\" else 0,\n",
+    "    },\n",
+    "    \"RTG\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 0 if str(x) == \"B152381\" else 20,\n",
+    "    },\n",
+    "    \"SMP\": {\n",
+    "        \"code_column_number\": 1,\n",
+    "        \"stock_column_number\": 2,\n",
+    "        \"process_func\": lambda x: 10 if x == 0 else 0,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def upload_to_sqlite(df, table_name, if_exists, db_path=\"data.db\"):\n",
+    "    conn = sqlite3.connect(db_path)\n",
+    "    df.to_sql(table_name, conn, if_exists=if_exists, index=False)\n",
+    "\n",
+    "\n",
+    "def read_from_sqlite(table_name, db_path=\"data.db\"):\n",
+    "    conn = sqlite3.connect(db_path)\n",
+    "    df = pd.read_sql(f\"SELECT * FROM {table_name}\", conn)\n",
+    "    conn.close()\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def process_inventory_data(days=7):\n",
+    "\n",
+    "    inventory_df = read_from_sqlite(\"inventory\")\n",
+    "\n",
     "    # Convert timestamp to datetime\n",
-    "    inventory_df['timestamp'] = pd.to_datetime(inventory_df['timestamp'])\n",
+    "    inventory_df[\"timestamp\"] = pd.to_datetime(inventory_df[\"timestamp\"])\n",
     "\n",
     "    # Filter for dates in the past week\n",
     "    one_week_ago = pd.Timestamp.now() - pd.Timedelta(days=days)\n",
-    "    inventory_df = inventory_df[inventory_df['timestamp'] >= one_week_ago]\n",
+    "    inventory_df = inventory_df[inventory_df[\"timestamp\"] >= one_week_ago]\n",
     "\n",
     "    # Sort the filtered data\n",
-    "    inventory_df.sort_values(by=['supplier', 'code', 'timestamp'], inplace=True)\n",
+    "    inventory_df.sort_values(by=[\"supplier\", \"code\", \"timestamp\"], inplace=True)\n",
     "\n",
     "    # Group by supplier and code\n",
-    "    grouped_df = inventory_df.groupby(['supplier', 'code'])\n",
+    "    grouped_df = inventory_df.groupby([\"supplier\", \"code\"])\n",
     "\n",
     "    # Calculate the net delta\n",
     "    net_delta_df = grouped_df.agg(\n",
-    "        start_stock=('stock_calculation', 'first'),\n",
-    "        end_stock=('stock_calculation', 'last'),\n",
-    "        start_date=('timestamp', 'first'),\n",
-    "        end_date=('timestamp', 'last')\n",
+    "        start_stock=(\"stock_calculation\", \"first\"),\n",
+    "        end_stock=(\"stock_calculation\", \"last\"),\n",
+    "        start_date=(\"timestamp\", \"first\"),\n",
+    "        end_date=(\"timestamp\", \"last\"),\n",
     "    ).reset_index()\n",
     "\n",
     "    # Calculate the delta\n",
-    "    net_delta_df['change'] = net_delta_df['end_stock'] - net_delta_df['start_stock']\n",
+    "    net_delta_df[\"change\"] = net_delta_df[\"end_stock\"] - net_delta_df[\"start_stock\"]\n",
     "\n",
     "    # Select relevant columns for the final table\n",
-    "    final_df = net_delta_df[['supplier', 'code', 'start_date', 'end_date', 'change']]\n",
+    "    final_df = net_delta_df[\n",
+    "        [\n",
+    "            \"supplier\",\n",
+    "            \"code\",\n",
+    "            \"start_date\",\n",
+    "            \"end_date\",\n",
+    "            \"start_stock\",\n",
+    "            \"end_stock\",\n",
+    "            \"change\",\n",
+    "        ]\n",
+    "    ]\n",
     "\n",
-    "    return final_df\n"
+    "    # final_df = final_df[final_df[\"change\"] != 0]\n",
+    "\n",
+    "    return final_df\n",
+    "\n",
+    "\n",
+    "def process_dataframe(config_key, file):\n",
+    "    df = pd.read_excel(file)\n",
+    "    code_column = df.iloc[:, config[config_key][\"code_column_number\"] - 1]\n",
+    "    stock_column = df.iloc[:, config[config_key][\"stock_column_number\"] - 1]\n",
+    "    df_output = pd.DataFrame(\n",
+    "        {\n",
+    "            \"supplier\": config_key,\n",
+    "            \"code\": code_column,\n",
+    "            \"custom_label\": code_column.apply(lambda code: f\"UKD-{config_key}-{code}\"),\n",
+    "            \"stock\": stock_column,\n",
+    "            \"stock_calculation\": stock_column.apply(config[config_key][\"process_func\"]),\n",
+    "            \"timestamp\": pd.Timestamp.now().strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+    "        }\n",
+    "    )\n",
+    "    return df_output\n",
+    "\n",
+    "\n",
+    "item_ids = pd.read_csv(\"item_ids.csv\")\n",
+    "upload_to_sqlite(item_ids, \"item_ids\", \"replace\")\n",
+    "\n",
+    "inventory_df = process_inventory_data()\n",
+    "\n",
+    "upload_to_sqlite(inventory_df, \"inventory_changes\", \"replace\")\n",
+    "\n",
+    "# Create a new dataframe with renamed columns\n",
+    "ebay_df = inventory_df.rename(\n",
+    "    columns={\"code\": \"CustomLabel\", \"end_stock\": \"Quantity\"}\n",
+    ")\n",
+    "\n",
+    "ebay_df[\"Action\"] = \"Revise\"\n",
+    "ebay_df[\"SiteID\"] = \"UK\"\n",
+    "ebay_df[\"Currency\"] = \"GBP\"\n",
+    "\n",
+    "ebay_df = ebay_df[\n",
+    "    [\n",
+    "        \"Action\",\n",
+    "        \"CustomLabel\",\n",
+    "        \"SiteID\",\n",
+    "        \"Currency\",\n",
+    "        \"Quantity\",\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "# Remove rows with null values in the Quantity column\n",
+    "ebay_df = ebay_df.dropna(subset=[\"Quantity\"])\n",
+    "\n",
+    "# Convert Quantity to integer type\n",
+    "ebay_df[\"Quantity\"] = ebay_df[\"Quantity\"].astype(int)\n",
+    "\n",
+    "# Join ebay_df with item_ids on the \"custom_label\" column\n",
+    "ebay_df = ebay_df.merge(\n",
+    "    item_ids, left_on=\"CustomLabel\", right_on=\"custom_label\", how=\"left\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>supplier</th>\n",
+       "      <th>code</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>start_stock</th>\n",
+       "      <th>end_stock</th>\n",
+       "      <th>change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>APE</td>\n",
+       "      <td>ABR101</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>APE</td>\n",
+       "      <td>ABR102</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>APE</td>\n",
+       "      <td>ABR103</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>APE</td>\n",
+       "      <td>ABR104</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>APE</td>\n",
+       "      <td>ABR105</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>2024-07-31 14:17:36</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373062</th>\n",
+       "      <td>SMP</td>\n",
+       "      <td>WVL006</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373063</th>\n",
+       "      <td>SMP</td>\n",
+       "      <td>WVL008</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373064</th>\n",
+       "      <td>SMP</td>\n",
+       "      <td>WVL009</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373065</th>\n",
+       "      <td>SMP</td>\n",
+       "      <td>WVL010</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373066</th>\n",
+       "      <td>SMP</td>\n",
+       "      <td>WVL011</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>2024-07-31 14:17:47</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>373067 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       supplier    code          start_date            end_date  start_stock  \\\n",
+       "0           APE  ABR101 2024-07-31 14:17:36 2024-07-31 14:17:36         10.0   \n",
+       "1           APE  ABR102 2024-07-31 14:17:36 2024-07-31 14:17:36         10.0   \n",
+       "2           APE  ABR103 2024-07-31 14:17:36 2024-07-31 14:17:36         10.0   \n",
+       "3           APE  ABR104 2024-07-31 14:17:36 2024-07-31 14:17:36         10.0   \n",
+       "4           APE  ABR105 2024-07-31 14:17:36 2024-07-31 14:17:36         10.0   \n",
+       "...         ...     ...                 ...                 ...          ...   \n",
+       "373062      SMP  WVL006 2024-07-31 14:17:47 2024-07-31 14:17:47          0.0   \n",
+       "373063      SMP  WVL008 2024-07-31 14:17:47 2024-07-31 14:17:47          0.0   \n",
+       "373064      SMP  WVL009 2024-07-31 14:17:47 2024-07-31 14:17:47          0.0   \n",
+       "373065      SMP  WVL010 2024-07-31 14:17:47 2024-07-31 14:17:47          0.0   \n",
+       "373066      SMP  WVL011 2024-07-31 14:17:47 2024-07-31 14:17:47          0.0   \n",
+       "\n",
+       "        end_stock  change  \n",
+       "0            10.0     0.0  \n",
+       "1            10.0     0.0  \n",
+       "2            10.0     0.0  \n",
+       "3            10.0     0.0  \n",
+       "4            10.0     0.0  \n",
+       "...           ...     ...  \n",
+       "373062        0.0     0.0  \n",
+       "373063        0.0     0.0  \n",
+       "373064        0.0     0.0  \n",
+       "373065        0.0     0.0  \n",
+       "373066        0.0     0.0  \n",
+       "\n",
+       "[373067 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventory_df"
    ]
   },
   {
