--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
     "    )\n",
     "    ebay_df = ebay_df.rename(columns={\"item_id\": \"ItemID\"})\n",
     "\n",
-    "    # ebay_df = ebay_df[[\"Action\", \"ItemID\", \"SiteID\", \"Currency\", \"Quantity\"]]\n",
+    "    ebay_df = ebay_df[[\"Action\", \"ItemID\", \"SiteID\", \"Currency\", \"Quantity\", \"store\"]]\n",
     "    return ebay_df\n",
     "\n",
     "\n",
@@ -217,13 +217,13 @@
     "\n",
     "# Create a new dataframe with renamed columns\n",
     "ebay_df = create_ebay_dataframe(\n",
-    "    inventory_df, store_database[[\"item_id\", \"custom_label\"]]\n",
+    "    inventory_df, store_database[[\"item_id\", \"custom_label\", \"store\"]]\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -248,68 +248,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Action</th>\n",
-       "      <th>CustomLabel</th>\n",
+       "      <th>ItemID</th>\n",
        "      <th>SiteID</th>\n",
        "      <th>Currency</th>\n",
        "      <th>Quantity</th>\n",
-       "      <th>ItemID</th>\n",
-       "      <th>custom_label</th>\n",
+       "      <th>store</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
+       "      <td>1.553220e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>10</td>\n",
-       "      <td>1.553220e+11</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
+       "      <td>1.553221e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>10</td>\n",
-       "      <td>1.553221e+11</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
+       "      <td>2.041946e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>10</td>\n",
-       "      <td>2.041946e+11</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-APE-ABR102</td>\n",
+       "      <td>2.041937e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>10</td>\n",
-       "      <td>2.041937e+11</td>\n",
-       "      <td>UKD-APE-ABR102</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-APE-ABR102</td>\n",
+       "      <td>2.041938e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>10</td>\n",
-       "      <td>2.041938e+11</td>\n",
-       "      <td>UKD-APE-ABR102</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -320,89 +313,71 @@
        "    <tr>\n",
        "      <th>642214</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-SMP-WVL006</td>\n",
+       "      <td>1.552251e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.552251e+11</td>\n",
-       "      <td>UKD-SMP-WVL006</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>642215</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-SMP-WVL008</td>\n",
+       "      <td>2.041326e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>0</td>\n",
-       "      <td>2.041326e+11</td>\n",
-       "      <td>UKD-SMP-WVL008</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>642216</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-SMP-WVL009</td>\n",
+       "      <td>1.552251e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.552251e+11</td>\n",
-       "      <td>UKD-SMP-WVL009</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>642217</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-SMP-WVL010</td>\n",
+       "      <td>1.552251e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.552251e+11</td>\n",
-       "      <td>UKD-SMP-WVL010</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>642218</th>\n",
        "      <td>Revise</td>\n",
-       "      <td>UKD-SMP-WVL011</td>\n",
+       "      <td>2.041326e+11</td>\n",
        "      <td>UK</td>\n",
        "      <td>GBP</td>\n",
        "      <td>0</td>\n",
-       "      <td>2.041326e+11</td>\n",
-       "      <td>UKD-SMP-WVL011</td>\n",
+       "      <td>AST</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>642219 rows × 7 columns</p>\n",
+       "<p>642219 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Action     CustomLabel SiteID Currency  Quantity        ItemID  \\\n",
-       "0       Revise  UKD-APE-ABR101     UK      GBP        10  1.553220e+11   \n",
-       "1       Revise  UKD-APE-ABR101     UK      GBP        10  1.553221e+11   \n",
-       "2       Revise  UKD-APE-ABR101     UK      GBP        10  2.041946e+11   \n",
-       "3       Revise  UKD-APE-ABR102     UK      GBP        10  2.041937e+11   \n",
-       "4       Revise  UKD-APE-ABR102     UK      GBP        10  2.041938e+11   \n",
-       "...        ...             ...    ...      ...       ...           ...   \n",
-       "642214  Revise  UKD-SMP-WVL006     UK      GBP         0  1.552251e+11   \n",
-       "642215  Revise  UKD-SMP-WVL008     UK      GBP         0  2.041326e+11   \n",
-       "642216  Revise  UKD-SMP-WVL009     UK      GBP         0  1.552251e+11   \n",
-       "642217  Revise  UKD-SMP-WVL010     UK      GBP         0  1.552251e+11   \n",
-       "642218  Revise  UKD-SMP-WVL011     UK      GBP         0  2.041326e+11   \n",
+       "        Action        ItemID SiteID Currency  Quantity store\n",
+       "0       Revise  1.553220e+11     UK      GBP        10   AST\n",
+       "1       Revise  1.553221e+11     UK      GBP        10   AST\n",
+       "2       Revise  2.041946e+11     UK      GBP        10   AST\n",
+       "3       Revise  2.041937e+11     UK      GBP        10   AST\n",
+       "4       Revise  2.041938e+11     UK      GBP        10   AST\n",
+       "...        ...           ...    ...      ...       ...   ...\n",
+       "642214  Revise  1.552251e+11     UK      GBP         0   AST\n",
+       "642215  Revise  2.041326e+11     UK      GBP         0   AST\n",
+       "642216  Revise  1.552251e+11     UK      GBP         0   AST\n",
+       "642217  Revise  1.552251e+11     UK      GBP         0   AST\n",
+       "642218  Revise  2.041326e+11     UK      GBP         0   AST\n",
        "\n",
-       "          custom_label  \n",
-       "0       UKD-APE-ABR101  \n",
-       "1       UKD-APE-ABR101  \n",
-       "2       UKD-APE-ABR101  \n",
-       "3       UKD-APE-ABR102  \n",
-       "4       UKD-APE-ABR102  \n",
-       "...                ...  \n",
-       "642214  UKD-SMP-WVL006  \n",
-       "642215  UKD-SMP-WVL008  \n",
-       "642216  UKD-SMP-WVL009  \n",
-       "642217  UKD-SMP-WVL010  \n",
-       "642218  UKD-SMP-WVL011  \n",
-       "\n",
-       "[642219 rows x 7 columns]"
+       "[642219 rows x 6 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
