--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,6 @@
     "import pandas as pd\n",
     "\n",
     "ebay_df = pd.read_csv(\"ebay_df.csv\")\n",
-    "stock_df = pd.read_csv(\"stock_df.csv\")\n",
     "store_df = pd.read_csv(\"store_df.csv\")\n",
     "product_df = pd.read_csv(\"product_df.csv\")\n",
     "ams_df = pd.read_csv(\"store_data/AMS.csv\")"
@@ -17,7 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import sqlite3\n",
+    "\n",
+    "# def read_from_sqlite(table_name, db_path=\"data.db\"):\n",
+    "#     conn = sqlite3.connect(db_path)\n",
+    "#     df = pd.read_sql(f\"SELECT * FROM {table_name}\", conn)\n",
+    "#     conn.close()\n",
+    "#     return df\n",
+    "\n",
+    "# supplier_stock_df = read_from_sqlite(\"supplier_stock\")\n",
+    "# supplier_stock_df.drop_duplicates(subset=[\"stock_id\"], inplace=True)\n",
+    "\n",
+    "# supplier_stock_df.to_csv(\"supplier_stock.csv\", index=False)\n",
+    "\n",
+    "supplier_stock_df = pd.read_csv(\"supplier_stock.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +238,279 @@
        "[44686 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged = pd.merge(df_merged, supplier_stock_df, on=\"product_id\", how=\"inner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>part_number</th>\n",
+       "      <th>custom_label</th>\n",
+       "      <th>supplier</th>\n",
+       "      <th>last_updated_x</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>current_quantity</th>\n",
+       "      <th>stock_id</th>\n",
+       "      <th>quantity_raw</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>last_updated_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RTG-A203</td>\n",
+       "      <td>A203</td>\n",
+       "      <td>A203</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>334150473977</td>\n",
+       "      <td>Base AMS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-A203</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RTG-A229</td>\n",
+       "      <td>A229</td>\n",
+       "      <td>A229</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>224247969547</td>\n",
+       "      <td>Base AMS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-A229</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RTG-A287</td>\n",
+       "      <td>A287</td>\n",
+       "      <td>A287</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>225876693758</td>\n",
+       "      <td>Base AMS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-A287</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RTG-A287</td>\n",
+       "      <td>A287</td>\n",
+       "      <td>A287</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>226159362633</td>\n",
+       "      <td>Ikio</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-A287</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RTG-A287</td>\n",
+       "      <td>A287</td>\n",
+       "      <td>A287</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>226159362625</td>\n",
+       "      <td>Rampro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-A287</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3958</th>\n",
+       "      <td>RTG-WWY34</td>\n",
+       "      <td>WWY34</td>\n",
+       "      <td>WWY34</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>335406942625</td>\n",
+       "      <td>Ikio</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-WWY34</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3959</th>\n",
+       "      <td>RTG-WWY40+WWY41</td>\n",
+       "      <td>WWY40+WWY41</td>\n",
+       "      <td>WWY40+WWY41</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>326137742382</td>\n",
+       "      <td>Rampro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-WWY40+WWY41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3960</th>\n",
+       "      <td>RTG-WWY40+WWY41</td>\n",
+       "      <td>WWY40+WWY41</td>\n",
+       "      <td>WWY40+WWY41</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>224920765911</td>\n",
+       "      <td>Ikio</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-WWY40+WWY41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3961</th>\n",
+       "      <td>RTG-WWY41</td>\n",
+       "      <td>WWY41</td>\n",
+       "      <td>WWY41</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>326137742372</td>\n",
+       "      <td>Rampro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-WWY41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3962</th>\n",
+       "      <td>RTG-WWY41</td>\n",
+       "      <td>WWY41</td>\n",
+       "      <td>WWY41</td>\n",
+       "      <td>RTG</td>\n",
+       "      <td>2024-05-04 06:08:45</td>\n",
+       "      <td>335406942647</td>\n",
+       "      <td>Ikio</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-08-06-RTG-WWY41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2024-08-06 19:25:12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3963 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           product_id  part_number custom_label supplier       last_updated_x  \\\n",
+       "0            RTG-A203         A203         A203      RTG  2024-05-04 06:08:45   \n",
+       "1            RTG-A229         A229         A229      RTG  2024-05-04 06:08:45   \n",
+       "2            RTG-A287         A287         A287      RTG  2024-05-04 06:08:45   \n",
+       "3            RTG-A287         A287         A287      RTG  2024-05-04 06:08:45   \n",
+       "4            RTG-A287         A287         A287      RTG  2024-05-04 06:08:45   \n",
+       "...               ...          ...          ...      ...                  ...   \n",
+       "3958        RTG-WWY34        WWY34        WWY34      RTG  2024-05-04 06:08:45   \n",
+       "3959  RTG-WWY40+WWY41  WWY40+WWY41  WWY40+WWY41      RTG  2024-05-04 06:08:45   \n",
+       "3960  RTG-WWY40+WWY41  WWY40+WWY41  WWY40+WWY41      RTG  2024-05-04 06:08:45   \n",
+       "3961        RTG-WWY41        WWY41        WWY41      RTG  2024-05-04 06:08:45   \n",
+       "3962        RTG-WWY41        WWY41        WWY41      RTG  2024-05-04 06:08:45   \n",
+       "\n",
+       "           item_id     brand  current_quantity                    stock_id  \\\n",
+       "0     334150473977  Base AMS                 0         2024-08-06-RTG-A203   \n",
+       "1     224247969547  Base AMS                 0         2024-08-06-RTG-A229   \n",
+       "2     225876693758  Base AMS                 0         2024-08-06-RTG-A287   \n",
+       "3     226159362633      Ikio                 0         2024-08-06-RTG-A287   \n",
+       "4     226159362625    Rampro                 0         2024-08-06-RTG-A287   \n",
+       "...            ...       ...               ...                         ...   \n",
+       "3958  335406942625      Ikio                 0        2024-08-06-RTG-WWY34   \n",
+       "3959  326137742382    Rampro                 0  2024-08-06-RTG-WWY40+WWY41   \n",
+       "3960  224920765911      Ikio                 0  2024-08-06-RTG-WWY40+WWY41   \n",
+       "3961  326137742372    Rampro                 0        2024-08-06-RTG-WWY41   \n",
+       "3962  335406942647      Ikio                 0        2024-08-06-RTG-WWY41   \n",
+       "\n",
+       "     quantity_raw  quantity       last_updated_y  \n",
+       "0             NaN      20.0  2024-08-06 19:25:12  \n",
+       "1             NaN      20.0  2024-08-06 19:25:12  \n",
+       "2             NaN      20.0  2024-08-06 19:25:12  \n",
+       "3             NaN      20.0  2024-08-06 19:25:12  \n",
+       "4             NaN      20.0  2024-08-06 19:25:12  \n",
+       "...           ...       ...                  ...  \n",
+       "3958          NaN      20.0  2024-08-06 19:25:12  \n",
+       "3959          NaN      20.0  2024-08-06 19:25:12  \n",
+       "3960          NaN      20.0  2024-08-06 19:25:12  \n",
+       "3961          NaN      20.0  2024-08-06 19:25:12  \n",
+       "3962          NaN      20.0  2024-08-06 19:25:12  \n",
+       "\n",
+       "[3963 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,13 +523,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WWY55\n",
-    "UKD-BMC-ACCORDKIT"
+    "RTG-A203\t\n",
+    "RTG-WWY41"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +596,7 @@
        "2  Revise    UKD-COM-CS17     UK      GBP         3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,72 +607,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>quantity_delta</th>\n",
-       "      <th>updated_date</th>\n",
-       "      <th>Quantity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>APE-ABR101</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>APE-ABR102</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>COM-CS17</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   product_id  quantity_delta updated_date  Quantity\n",
-       "0  APE-ABR101             5.0   2024-08-06      10.0\n",
-       "1  APE-ABR102             5.0   2024-08-06      10.0\n",
-       "2    COM-CS17             1.0   2024-08-06       3.0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'stock_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mstock_df\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'stock_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -388,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +677,7 @@
        "216594   RTG-CS17        CS17         CS17      RTG  2024-05-04 06:08:45"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +900,7 @@
        "[89 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +1133,7 @@
        "8       3.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
