--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -920,227 +920,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8j/qdfkl38s5p11l966skbxw4300000gn/T/ipykernel_15776/4062621561.py:13: DtypeWarning: Columns (1,2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(os.path.join('store_data', file))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined 10 store files into store_df.csv\n",
+      "        item_id       brand custom_label  current_quantity store  Unnamed: 4\n",
+      "0  1.259848e+11  Base Orius         A286              20.0    OR         NaN\n",
+      "1  1.158392e+11  Base Orius       A286x2              20.0    OR         NaN\n",
+      "2  1.261928e+11  Base Orius         A287               0.0    OR         NaN\n",
+      "3  1.261929e+11        Idea         A287               0.0    OR         NaN\n",
+      "4  1.159812e+11  Base Orius    A287+A288               0.0    OR         NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Get all CSV files from store_data folder\n",
+    "csv_files = [f for f in os.listdir('store_data') if f.endswith('.csv')]\n",
+    "\n",
+    "# Initialize an empty list to store dataframes\n",
+    "dfs = []\n",
+    "\n",
+    "# Read each CSV file and add a 'store' column\n",
+    "for file in csv_files:\n",
+    "    store_name = file.split('.')[0]  # Get store name from file name\n",
+    "    df = pd.read_csv(os.path.join('store_data', file))\n",
+    "    df['store'] = store_name\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "# Concatenate all dataframes\n",
+    "store_df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "# Save the combined dataframe to a new CSV file\n",
+    "store_df.to_csv('store_df.csv', index=False)\n",
+    "\n",
+    "print(f\"Combined {len(csv_files)} store files into store_df.csv\")\n",
+    "print(store_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>custom_label</th>\n",
-       "      <th>current_quantity</th>\n",
-       "      <th>store</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>part_number</th>\n",
-       "      <th>supplier</th>\n",
-       "      <th>last_updated</th>\n",
-       "      <th>quantity_delta</th>\n",
-       "      <th>updated_date</th>\n",
-       "      <th>Quantity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>155321963392</td>\n",
-       "      <td>Apec</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
-       "      <td>10</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>APE-ABR101</td>\n",
-       "      <td>ABR101</td>\n",
-       "      <td>APE</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>155322066970</td>\n",
-       "      <td>Base AST</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
-       "      <td>10</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>APE-ABR101</td>\n",
-       "      <td>ABR101</td>\n",
-       "      <td>APE</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>204194607302</td>\n",
-       "      <td>Unova</td>\n",
-       "      <td>UKD-APE-ABR101</td>\n",
-       "      <td>10</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>APE-ABR101</td>\n",
-       "      <td>ABR101</td>\n",
-       "      <td>APE</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>204193670501</td>\n",
-       "      <td>Apec</td>\n",
-       "      <td>UKD-APE-ABR102</td>\n",
-       "      <td>10</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>APE-ABR102</td>\n",
-       "      <td>ABR102</td>\n",
-       "      <td>APE</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>204193760697</td>\n",
-       "      <td>Base AST</td>\n",
-       "      <td>UKD-APE-ABR102</td>\n",
-       "      <td>10</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>APE-ABR102</td>\n",
-       "      <td>ABR102</td>\n",
-       "      <td>APE</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>155323469175</td>\n",
-       "      <td>Unova</td>\n",
-       "      <td>UKD-APE-ABR102</td>\n",
-       "      <td>10</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>APE-ABR102</td>\n",
-       "      <td>ABR102</td>\n",
-       "      <td>APE</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>204691016501</td>\n",
-       "      <td>Comline</td>\n",
-       "      <td>UKD-COM-CS17</td>\n",
-       "      <td>2</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>COM-CS17</td>\n",
-       "      <td>CS17</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>156115447863</td>\n",
-       "      <td>Base AST</td>\n",
-       "      <td>UKD-COM-CS17</td>\n",
-       "      <td>2</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>COM-CS17</td>\n",
-       "      <td>CS17</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>156115547819</td>\n",
-       "      <td>Unova</td>\n",
-       "      <td>UKD-COM-CS17</td>\n",
-       "      <td>2</td>\n",
-       "      <td>AST</td>\n",
-       "      <td>COM-CS17</td>\n",
-       "      <td>CS17</td>\n",
-       "      <td>COM</td>\n",
-       "      <td>2024-05-04 06:08:45</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        item_id     brand    custom_label  current_quantity store  product_id  \\\n",
-       "0  155321963392      Apec  UKD-APE-ABR101                10   AST  APE-ABR101   \n",
-       "1  155322066970  Base AST  UKD-APE-ABR101                10   AST  APE-ABR101   \n",
-       "2  204194607302     Unova  UKD-APE-ABR101                10   AST  APE-ABR101   \n",
-       "3  204193670501      Apec  UKD-APE-ABR102                10   AST  APE-ABR102   \n",
-       "4  204193760697  Base AST  UKD-APE-ABR102                10   AST  APE-ABR102   \n",
-       "5  155323469175     Unova  UKD-APE-ABR102                10   AST  APE-ABR102   \n",
-       "6  204691016501   Comline    UKD-COM-CS17                 2   AST    COM-CS17   \n",
-       "7  156115447863  Base AST    UKD-COM-CS17                 2   AST    COM-CS17   \n",
-       "8  156115547819     Unova    UKD-COM-CS17                 2   AST    COM-CS17   \n",
-       "\n",
-       "  part_number supplier         last_updated  quantity_delta updated_date  \\\n",
-       "0      ABR101      APE  2024-05-04 06:08:45             5.0   2024-08-06   \n",
-       "1      ABR101      APE  2024-05-04 06:08:45             5.0   2024-08-06   \n",
-       "2      ABR101      APE  2024-05-04 06:08:45             5.0   2024-08-06   \n",
-       "3      ABR102      APE  2024-05-04 06:08:45             5.0   2024-08-06   \n",
-       "4      ABR102      APE  2024-05-04 06:08:45             5.0   2024-08-06   \n",
-       "5      ABR102      APE  2024-05-04 06:08:45             5.0   2024-08-06   \n",
-       "6        CS17      COM  2024-05-04 06:08:45             1.0   2024-08-06   \n",
-       "7        CS17      COM  2024-05-04 06:08:45             1.0   2024-08-06   \n",
-       "8        CS17      COM  2024-05-04 06:08:45             1.0   2024-08-06   \n",
-       "\n",
-       "   Quantity  \n",
-       "0      10.0  \n",
-       "1      10.0  \n",
-       "2      10.0  \n",
-       "3      10.0  \n",
-       "4      10.0  \n",
-       "5      10.0  \n",
-       "6       3.0  \n",
-       "7       3.0  \n",
-       "8       3.0  "
+       "34087842"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "store_df.size"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
